Fix overflow on mobile

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -3,8 +3,8 @@
 @import './transitions'
 @import './colors'
 
-.no-margin {
-  margin: 0;
+body {
+  overflow-x: hidden;
 }
 
 .uppercase {
